fastapi-app/k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: devops-app
  labels:
    app: devops-app
spec:
  type: NodePort
  selector:
    app: devops-app
  ports:
    - name: http
      port: 80
      targetPort: 8000
      nodePort: 30080
